--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@ class: section
 
 # Responsive Typography
 
-#### Design Thinking @ SVA    
-
-##### Marie Otsuka: April 26, 2022
+#### Design Thinking @ SVA
+#### Marie Otsuka: April 26, 2022
 
 
 ---
@@ -27,14 +26,13 @@ Thanks so much for inviting me to share my work with you today.
 
 ---
 
---
-
 - Type design & tool engineering<br>
 at [Occupant Fonts](https://occupantfonts.com)
 
 --
 
-- Teaching web / type at [RISD](https://risd-web.github.io/webtype-spring2020/students/)
+- Teaching programming /<br>
+type-related courses at [RISD](https://risd-web.github.io/webtype-spring2020/students/)
 
 --
 
@@ -45,6 +43,11 @@ at [Occupant Fonts](https://occupantfonts.com)
 --
 
 - Graphic Design
+
+---
+class: section, middle, center
+
+<h1 class="live">Live Type</h1>
 
 ---
 class: middle, center
@@ -73,19 +76,24 @@ class: quote
 ---
 class: center, middle
 
+# Variable Fonts
+# ×
+
+--
+
 # Handmade Websites
 
 ---
 class: quote
 
-### “In today’s highly commercialised web of multinational corporations, proprietary applications, read-only devices, search algorithms, Content Management Systems, WYSIWYG editors, and digital publishers it becomes an increasingly radical act to hand-code and self-publish experimental web art and writing projects.”
-##### J. R. Carpenter, March 2015
+### “I evoke the term ‘handmade web’ to suggest slowness and smallness as a forms of resistance. In today’s highly commercialised web of multinational corporations, proprietary applications, read-only devices, search algorithms, Content Management Systems, WYSIWYG editors, and digital publishers, it becomes an increasingly radical act to hand-code and self-publish experimental web art and writing projects.”
+##### J. R. Carpenter, [Handmade Web](http://luckysoap.com/statements/handmadeweb.html), March 2015
 
 ---
 class: section, middle, center
 
-## Typeface as a Collaboration
-#### Typography as a response
+# Typeface as Response
+#### Collaborative Typography
 
 ---
 
@@ -95,6 +103,10 @@ class: section, middle, center
 
 # [occupantfonts.com](https://occupantfonts.com/)
 ##### Design with [Cem Eskinazi](https://www.cemeskinazi.com/) and [June Shin](https://junesh.in/), 2020
+
+
+--
+[“Responsive Design”](https://alistapart.com/article/responsive-web-design/)
 
 
 ???
@@ -120,9 +132,10 @@ Responsive Menu Items
 
 
 ---
-class: section
+class: section, middle, center
 
-#
+# Environmental Interfaces
+
 ---
 
 ## A response to the *seasons*
@@ -133,11 +146,18 @@ class: section
 ##### with [Laurel Shwulst](https://laurelschwulst.com/) and [Tiger Dingsun](https://www.tiger.exposed/index), Coming Soon
 
 ---
-
+class: grey
 
 - ![Poetry in Motion Poster](img/pim_poster.png)
 
 - ![Poetry in Motion Poster](img/pim_poster-inbus.png)
+
+---
+class: grey
+
+- ![Pentameter Specimen](img/Pentameter_Specimen-1.png)
+
+- ![Pentameter Specimen](img/Pentameter_Specimen-2.png)
 
 
 ---
@@ -154,15 +174,6 @@ class: section
 class: ra, center, bottom
 
 <video src="img/ra-screenshots.mp4" class="embed" autoplay muted loop>
-<figcaption>Active mode (ON) during full moon</figcaption>
-
----
-class: ra, center, bottom
-
-<video src="img/ra-screenshots.mp4" class="embed" autoplay muted loop>
-<figcaption>Inactive mode (OFF)</figcaption>
-
-???
 
 ---
 class: ra
@@ -207,7 +218,15 @@ background-color: black
 This was a website that not only does the typography respond to the sun, but one where the infrastructure responds to the site itself
 
 ---
-## Online data consumption
+class: bottom, center
+
+<div id="cloud">☁</div>
+
+--
+##### [The shape of the internet](https://noahveltman.com/internet-shape/)
+
+---
+## Average Web Page Size
 
 --
 - ### 2011
@@ -225,6 +244,7 @@ This was a website that not only does the typography respond to the sun, but one
 Source: [httparchive.org](https://httparchive.org/reports/page-weight)
 
 --
+
 
 ---
 class: bottom, mix
@@ -244,8 +264,6 @@ background-image: url(img/new-solar-charge-controller.png)
 
 <figcaption>Microcomputer Server</figcaption>
 
-???
-max 1.3 W/h
 
 ---
 class: middle, center
@@ -254,6 +272,9 @@ class: middle, center
 --
 #### revealing the infrastructure of the internet
 
+--
+with [Core Web Fonts](https://en.wikipedia.org/wiki/Core_fonts_for_the_Web)
+
 ???
 - Battery power
 - Page weight
@@ -261,25 +282,10 @@ class: middle, center
 - Change font!
 
 ---
-class: ra, center, middle
 
-## The anatomy of the internet
-
----
-class: ra, bottom, center
-
-<div id="cloud">☁</div>
-
---
-
-##### [The shape of the internet](https://noahveltman.com/internet-shape/)
-
----
 class: quote
 
-### “[Artists] have to start understanding the anatomy of machines, the language of machines, their nature, and to re-route them into functioning in irregular ways to create works of art with the machines themselves, using their own means.”
-
-##### Bruno Munari, 1938 *Manifesto del Macchinismo*
+### “Use” as a meaningful medium
 
 ---
 class: section
