--- a/index.html
+++ b/index.html
@@ -272,8 +272,6 @@ class: middle, center
 --
 #### revealing the infrastructure of the internet
 
---
-with [Core Web Fonts](https://en.wikipedia.org/wiki/Core_fonts_for_the_Web)
 
 ???
 - Battery power
@@ -282,8 +280,7 @@ with [Core Web Fonts](https://en.wikipedia.org/wiki/Core_fonts_for_the_Web)
 - Change font!
 
 ---
-
-class: quote
+class: middle, center
 
 ### “Use” as a meaningful medium
 
