type media content

--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Responsive Typography</title>
+    <title>Interfaces & Typefaces</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
+    <link rel="icon" 
+      type="image/svg" 
+      href="favicon.svg">
+   </head>
   <body>
     <textarea id="source">
 class: section
 
-# Responsive Typography
+# Interfaces & Typefaces
 
-#### Design Thinking @ SVA
-#### Marie Otsuka: April 26, 2022
-
+<footer>
+  <div class="runner-1">Marie Otsuka</div>
+  <div class="runner-2">May 9, 2022 @ Type Media
+</footer>
 
 ---
 class: middle, center
 
 ## Hello!
+
+<footer>
+  <div class="runner-1">Introduction</div>
+  <div class="runner-2"></div>
+</footer>
 
 ???
 
@@ -29,190 +38,354 @@ Thanks so much for inviting me to share my work with you today.
 - Type design & tool engineering<br>
 at [Occupant Fonts](https://occupantfonts.com)
 
+<footer>
+  <div class="runner-1">Introduction</div>
+  <div class="runner-2">What I do</div>
+</footer>
+
+--
+
+- Graphic design, <br>
+Web design & development
+
 --
 
 - Teaching programming /<br>
 type-related courses at [RISD](https://risd-web.github.io/webtype-spring2020/students/)
 
---
-
-## 
-
-- Web Design & Development
-
---
-
-- Graphic Design
-
 ---
-class: section, middle, center
+class: section, middle
 
-<h1 class="live">Live Type</h1>
+*Tool Design*
+# Organizational Interfaces
+
 
 ---
 class: middle, center
 
-# [Variable Fonts](https://vf.typenetwork.com/) 
+## Project Milk, *ongoing*
+
+##### with [Cem Eskinazi](https://www.cemeskinazi.com/) and [Nic Schumann](https://nicschumann.co/)
+##### (and contributions from [Rubén Rodríguez](https://rubenrodriguez.me/) and [Matt Phillips](https://mattphillips.us/) )
+
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">Project Milk</div>
+</footer>
 
 ---
-class: center
+class: middle, center
 
-![Font Files](img/fontfiles.png)
---
-<figcaption>4.3MB total of 30 .otf font files → 504KB single .woff2 file</figcaption>
+## Auto-kerning Paradox
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">Project Milk</div>
+</footer>
+
+---
+<ol class="numbered">
+<li>Plan</li>
+</ol>
+<div class="figure" id="plan">
+    <div class="list-build">Upper Case × Upper Case</div>
+    <div class="list-build">Upper Case × Lower Case</div>
+    <div class="list-build">Upper Case × Numbers</div>
+    <div class="list-build">Numbers × Numbers</div>
+    <div class="list-build">Upper Case × Punctuation</div>
+    <div class="list-build">Lower Case × Punctuation</div>
+    <div class="list-build">...etc.</div>
+</div>
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">Project Milk</div>
+</footer>
+---
+
+<ol class="numbered">
+<li> Plan</li>
+<li> Kern</li>
+</ol>
+
+<div class="figure">
+    <div class="kern-pair">ATA</div>
+    <div class="kern-pair">AYA</div>
+</div>
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">Project Milk</div>
+</footer>
+---
+
+<ol class="numbered">
+<li> Plan</li>
+<li> Kern</li>
+<li> Track</li>
+</ol>
+
+<div class="figure" id="progress">
+    <div class="list-build"><span class="check">✓</span> Upper Case × Upper Case</div>
+    <div class="list-build"><span class="check">✓</span> Upper Case × Lower Case</div>
+    <div class="list-build"><span class="check">✓</span> Upper Case × Numbers</div>
+    <div class="list-build"> Numbers × Numbers</div>
+    <div class="list-build"> Upper Case × Punctuation</div>
+    <div class="list-build"> Lower Case × Punctuation</div>
+    <div class="list-build">...etc.</div>
+</div>
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">Project Milk</div>
+</footer>
+
+---
+
+<ol class="numbered">
+<li> Plan</li>
+<li> Kern</li>
+<li> Track</li>
+<li> Proof</li>
+</ol>
+
+<div class="figure">
+    <div class="proof-pair">HOHATAHOH</div>
+    <div class="proof-pair">HOHVTVHOH</div>
+    <div class="proof-pair">HOHWTWHOH</div>
+    <div class="proof-pair">HOHYTYOH</div>
+    <div class="proof-pair">HOHXTXOH</div>
+    <div class="proof-pair">HOHKTKOH</div>
+</div>
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">Project Milk</div>
+</footer>
+
+---
+class: cols
+- 
+<ol class="numbered">
+<li><em>Help</em> plan</li>
+<li><em>Auto</em> kern</li>
+<li><em>Auto</em> track</li>
+<li><em>Help</em> proof</li>
+</ol>
+
+- 
+<img src="img/project_milk_2.png">
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">Project Milk</div>
+</footer>
+
+---
+class: middle, center
+
+## Variable Font Visualizer
+## [vfbounds.occupantfonts.com](https://vfbounds.occupantfonts.com/)
+
+##### with [Nic Schumann](https://nicschumann.co/), 2020~
+
+---
+
+Fun with [Variable Fonts](https://vf.typenetwork.com/)
+## Continuous fluidity
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">VF Bounds</div>
+</footer>
+
+---
+
+Not so fun with variable fonts
+## Breaking variability
+
+<footer>
+  <div class="runner-1">Organizational Interfaces</div>
+  <div class="runner-2">VF Bounds</div>
+</footer>
+
+---
+class: section, middle
+
+*Typesetting functions*
+# Typographic Interfaces
 
 ---
 class: quote
 
-### “Variable Fonts represent an opportunity to reinvent the relationship between me, the type designer, and my user ... we work together to make typography.”
+“Variable Fonts represent an opportunity to reinvent the relationship between me, the type designer, and my user ... we work together to make typography.”
 <figcaption>David Jonathan Ross, <a href="https://vimeo.com/251494096">We Are Family! I’ve Got All My Variations With Me</a><br>Type @ Cooper, 11/6/2017</figcaption>
 
-<!-- class: quote
-
-### “...The writer would be working closer to the nature of the multiplied result, and through an increasing awareness and gradual mastery of the form’s new limitations and possibilities *the writing itself would evolve;* the shorter the distance between the raw material of words and their processed output, the more entwined the content and form from the outset. ”
-##### Dexter Sinister, [*Letter & Spirit*](https://www.servinglibrary.org/journal/3/letter-and-spirit), 2012
- -->
+<footer>
+  <div class="runner-1">Typographic Interfaces</div>
+  <div class="runner-2"></div>
+</footer>
 
 ---
 class: center, middle
 
-# Variable Fonts
-# ×
+## A function of *the user*
 
---
-
-# Handmade Websites
-
----
-class: quote
-
-### “I evoke the term ‘handmade web’ to suggest slowness and smallness as a forms of resistance. In today’s highly commercialised web of multinational corporations, proprietary applications, read-only devices, search algorithms, Content Management Systems, WYSIWYG editors, and digital publishers, it becomes an increasingly radical act to hand-code and self-publish experimental web art and writing projects.”
-##### J. R. Carpenter, [Handmade Web](http://luckysoap.com/statements/handmadeweb.html), March 2015
-
----
-class: section, middle, center
-
-# Typeface as Response
-#### Collaborative Typography
-
----
-
-## A response to *the browser*
-
+<footer>
+  <div class="runner-1">Typographic Interfaces</div>
+  <div class="runner-2">Occupantfonts.com</div>
+</footer>
 --
 
 # [occupantfonts.com](https://occupantfonts.com/)
-##### Design with [Cem Eskinazi](https://www.cemeskinazi.com/) and [June Shin](https://junesh.in/), 2020
-
-
---
-[“Responsive Design”](https://alistapart.com/article/responsive-web-design/)
+##### with [Cem Eskinazi](https://www.cemeskinazi.com/) and [June Shin](https://junesh.in/), 2020
 
 
 ???
-Responsive Menu Items
+Responsive Menu Items, Edit Mode
 
 ---
+class: center, middle
 
-## A response to reading *preferences*
+## A function of other *typefaces*
 
---
-
-# [textlab.occupanfonts.com](http://textlab.occupantfonts.com/)
-##### Design & Development by [Minkyoung Kim](http://minkyoungkim.com/), 2021
-  
----
-
-## A response to other *typefaces*
+<footer>
+  <div class="runner-1">Typographic Interfaces</div>
+  <div class="runner-2">Counterparts</div>
+</footer>
 
 --
 
 # [counterparts](https://morisawausa.github.io/_counterparts/animals-alphabets/#en-landing)
-##### with Morisawa Japan, Coming Soon / Ongoing
-
-
----
-class: section, middle, center
-
-# Environmental Interfaces
+##### with Morisawa Japan, ongoing
 
 ---
+class: section, middle
 
-## A response to the *seasons*
+*Typefaces as functions*
+#Environmental interfaces
+
+---
+class: quote
+
+“Technology is the active human interface with the material world.”
+
+<figcaption>Ursula le Guin, <a href="http://ursulakleguinarchive.com/Note-Technology.html">A Rant about “Technology”</figcaption>
+
+---
+class: middle, center
+
+## A function of the *seasons*
+
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Pentameter</div>
+</footer>
 
 --
 
 # [pentad.world](https://pentad.world)
-##### with [Laurel Shwulst](https://laurelschwulst.com/) and [Tiger Dingsun](https://www.tiger.exposed/index), Coming Soon
+##### with [Laurel Shwulst](https://laurelschwulst.com/) and [Tiger Dingsun](https://www.tiger.exposed/index), May 2022
 
 ---
-class: grey
-
-- ![Poetry in Motion Poster](img/pim_poster.png)
-
-- ![Poetry in Motion Poster](img/pim_poster-inbus.png)
-
----
-class: grey
+class: grey, cols
 
 - ![Pentameter Specimen](img/Pentameter_Specimen-1.png)
 
 - ![Pentameter Specimen](img/Pentameter_Specimen-2.png)
 
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Pentameter</div>
+</footer>
 
 ---
+class: grey, cols, middle
 
-## A response to the *moon*
+- ![Dwiggins Specimen](img/dwiggins_scan.png)
+<figcaption>Kennett, Bruce. W.A. Dwiggins: A Life in Design.</figcaption>
+
+- ![Cutouts](img/pim_cutouts.png)
+<figcaption>X-acto knife cutouts</figcaption>
+
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Pentameter</div>
+</footer>
+
+---
+class: grey, cols
+
+- ![Poetry in Motion Poster](img/pim_poster.png)
+
+- ![Poetry in Motion Poster](img/pim_poster-inbus.png)
+
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Pentameter</div>
+</footer>
+
+---
+class: middle, center
+
+## A function of the *moon*
+
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Radio Amnion</div>
+</footer>
+
 
 --
 # [radioamnion.net](https://radioamnion.net/)
-##### with [Minkyoung Kim](http://minkyoungkim.com/), 2021 / Ongoing
+##### with [Minkyoung Kim](http://minkyoungkim.com/), 2021~
 
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Radio Amnion</div>
+</footer>
 ???
-
----
-class: ra, center, bottom
-
-<video src="img/ra-screenshots.mp4" class="embed" autoplay muted loop>
 
 ---
 class: ra
 
-- <video src="img/MagmaticVF.mp4" class="embed" autoplay muted loop>
-<figcaption>Magmatic VF</figcaption>
+<video src="img/ra-screenshots.mp4" class="embed" autoplay muted loop>
+</video>
 
-- <video src="img/MoonVF.mp4" class="embed" autoplay muted loop>
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Radio Amnion</div>
+</footer>
+
+
+---
+class: ra, cols
+
+- <video src="img/MagmaticVF.mp4" class="embed" autoplay muted loop>
 <figcaption>Moon VF</figcaption>
 
----
-background-color: black
+- <video src="img/MoonVF.mp4" class="embed" autoplay muted loop>
+<figcaption>Magmatic VF</figcaption>
 
-![Radio Amnion Social Image](img/ra-1.png)
----
-background-color: black
-
-![Radio Amnion Social Image](img/ra-2.png)
----
-background-color: black
-
-![Radio Amnion Social Image](img/ra-3.png)
----
-background-color: black
-
-![Radio Amnion Social Image](img/ra-4.png)
----
-background-color: black
-
-![Radio Amnion Social Image](img/ra-5.png)
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Radio Amnion</div>
+</footer>
 
 ---
+class: middle, center
 
-## A response to the *sun*
+## A function of the *sun*
 
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Low-tech Magazine</div>
+</footer>
 --
 
 # [solar.lowtechmagazine.com](https://solar.lowtechmagazine.com/)
-##### with [Lauren Traugott-Campbell](https://squishysystems.com/), [Roel Roscam Abbing](https://test.roelof.info/), and [Kris De Decker](https://www.krisdedecker.org/), 2018 / Ongoing
+##### with [Lauren Traugott-Campbell](https://squishysystems.com/), [Roel Roscam Abbing](https://test.roelof.info/), and [Kris De Decker](https://www.krisdedecker.org/), 2018~
 
 ???
 This was a website that not only does the typography respond to the sun, but one where the infrastructure responds to the site itself
@@ -220,75 +393,79 @@ This was a website that not only does the typography respond to the sun, but one
 ---
 class: bottom, center
 
-<div id="cloud">☁</div>
+<div id="cloud"><a href="https://noahveltman.com/internet-shape/">☁</a></div>
 
---
-##### [The shape of the internet](https://noahveltman.com/internet-shape/)
-
----
-## Average Web Page Size
-
---
-- ### 2011
-519<span class="sm">KB</span> Desktop, 144<span class="sm">KB</span> Mobile
-
---
-- ### 2021
-2097<span class="sm">KB</span> Desktop, 1917<span class="sm">KB</span> Mobile
-
-
---
-
-# 
-
-Source: [httparchive.org](https://httparchive.org/reports/page-weight)
-
---
-
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Low-tech Magazine</div>
+</footer>
 
 ---
-class: bottom, mix
-background-image: url(img/barcelona.png)
+class: bottom
+background-image: url(img/ocean.png)
 
-<figcaption>Location: Barcelona</figcaption>
-
----
-class: bottom, mix
-background-image: url(img/solar-panel-solar-powered-server-2.png)
-
-<figcaption>Solar panels outside Kris’s balcony</figcaption>
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Low-tech Magazine</div>
+</footer>
 
 ---
-class: bottom, mix
-background-image: url(img/new-solar-charge-controller.png)
+class: bottom
+background-image: url(img/panel.png)
 
-<figcaption>Microcomputer Server</figcaption>
-
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Low-tech Magazine</div>
+</footer>
 
 ---
-class: middle, center
-## Designing for minimized energy use
+class: section, middle
 
---
-#### revealing the infrastructure of the internet
-
-
-???
-- Battery power
-- Page weight
-- Weather forecast
-- Change font!
+*Teaching & Learning*
+# Inventing Interfaces
 
 ---
 class: middle, center
 
-### “Use” as a meaningful medium
+# [Web Type](https://webtype.htmlkitchen.net/syllabus/)
+
+<footer>
+  <div class="runner-1">Inventing Interfaces</div>
+  <div class="runner-2">Web Type</div>
+</footer>
+
+--
+background-image: url(img/class.png)
 
 ---
-class: section
+class: middle, center
+
+# [Code Lab](https://github.com/RISD-Code-Lab)
+  
+<footer>
+  <div class="runner-1">Inventing Interfaces</div>
+  <div class="runner-2">Code Lab</div>
+</footer>
+
+--
+background-image: url(img/codelab.png)
+
+---
+class: middle, center
+
+# f(x) = ?
+
+---
+class: quote
+
+“Objects with function indicate a possibility of something to happen.
+Function leads to a potential story, thus function is indeed a narrative.”
+<figcaption>Weiyi Li, <em>Function as Narrative</em></figcaption>
+
+---
+class: section, middle
 
 # Thank you!
-
 marie@motsuka.com
 
 ???
