add american cursive handwriting

--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@ class: middle, center
 ---
 class: grey, cols
 
-- ![Pentameter Specimen](img/Pentameter_Specimen-1.png)
+- ![Poetry in Motion Poster](img/pim_poster.png)
 
-- ![Pentameter Specimen](img/Pentameter_Specimen-2.png)
+- ![Poetry in Motion Poster](img/pim_poster-inbus.png)
 
 <footer>
   <div class="runner-1">Environmental Interfaces</div>
@@ -315,11 +315,21 @@ class: grey, cols, middle
 </footer>
 
 ---
+class: grey, cols, middle
+
+![Cursive](img/cursive.png)
+
+<footer>
+  <div class="runner-1">Environmental Interfaces</div>
+  <div class="runner-2">Pentameter</div>
+</footer>
+
+---
 class: grey, cols
 
-- ![Poetry in Motion Poster](img/pim_poster.png)
+- ![Pentameter Specimen](img/Pentameter_Specimen-1.png)
 
-- ![Poetry in Motion Poster](img/pim_poster-inbus.png)
+- ![Pentameter Specimen](img/Pentameter_Specimen-2.png)
 
 <footer>
   <div class="runner-1">Environmental Interfaces</div>
@@ -453,7 +463,7 @@ background-image: url(img/codelab.png)
 ---
 class: middle, center
 
-# f(x) = ?
+# Functions
 
 ---
 class: quote
